--- a/website/style.css
+++ b/website/style.css
@@ -360,6 +360,7 @@ section#points-of-sale ul {
 
 section .contact {
   display: flex;
+  justify-content: space-between;
 }
 
 #contact-methods li {
@@ -372,22 +373,52 @@ section .contact {
 #contact-methods li::before {
   content: "";
   display: block;
-  width: 40px;
-  height: 40px;
-
-  /* float: left; */
+  width: 44px;
+  height: 44px;
   margin-right: 10px;
-  background-image: url(images/logo-sprite.png);
+  background: url(images/logo-sprite.png) no-repeat;
 }
 
 #contact-methods li:nth-child(1):before {
-  background-position: -158px 0;
+  background-position: -164px 0;
 }
 
 #contact-methods li:nth-child(2):before {
-  background-position: -198px 0;
+  background-position: -204px 0;
 }
 
 #contact-methods li:nth-child(3):before {
-  background-position: -238px 0;
+  background-position: -244px 0;
+}
+
+#social-nav {
+  display: flex;
+  position: relative;
+  top: -40px;
+}
+
+#social-nav li {
+  list-style: none;
+  width: 40px;
+  height: 40px;
+  background: url(images/logo-sprite.png) no-repeat;
+  text-indent: -100000px;
+}
+
+#social-nav li:nth-child(2) {
+  background-position: -40px 0;
+}
+
+#social-nav li:nth-child(3) {
+  background-position: -80px 0;
+}
+
+#social-nav li:nth-child(4) {
+  background-position: -120px 0;
+}
+
+#social-nav a {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
